<resources>
    <string name="app_name">Noteify</string>
    <string name="add_note">Add Note</string>
    <string name="note_title">Note Title</string>
    <string name="note_content">Note content</string>
    <string name="enter_note_body">Enter note body</string>
    <string name="enter_note_title">Enter note title</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_note_button">Add Note Button</string>
    <string name="undo">UNDO</string>
    <string name="all_notes">All Notes</string>
    <string name="favorites">Favorites</string>
    <string name="private_string">Private</string>
    <string name="deleted">Deleted</string>
    <string name="other">Other</string>
    <string name="settings">Settings</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="theme">Theme</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="cancel">Cancel</string>
    <string name="delete_all_notes">Delete all notes</string>
    <string name="save">Save</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="trash">Trash</string>
    <string name="date">Date</string>

    <string name="themeKey" translatable="false">theme</string>
    <string name="light" translatable="false">light</string>
    <string name="dark" translatable="false">dark</string>
    <string name="black" translatable="false">black</string>
    <string name="follow_system" translatable="false">follow_system</string>
</resources>